traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:12: error: not found: value get
                  {setPos(getX()+1,get(Y)-1);}}
                                   ^TraversalDiagonal:12: error: not found: value Y
                  {setPos(getX()+1,get(Y)-1);}}
                                       ^TraversalDiagonal:14: error: not found: value get
            { if (get X()==6)
                  ^TraversalDiagonal:20: error: not found: value get
                  {setPos(getX()+1,get(Y)-1);}}
                                   ^TraversalDiagonal:20: error: not found: value Y
                  {setPos(getX()+1,get(Y)-1);}}
                                       ^